--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
 
 website:
+  favicon: "img/rstats-logo.png"
   title: "R Stats Bootcamp"
   sidebar:
     logo: "img/rstats-logo.png"
