Update titles in course materials for consistency and clarity, add page footer configuration in _quarto.yml, and implement CSS to hide the footer. Remove outdated HTML files to streamline the project structure.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -46,6 +46,9 @@ website:
           - 14-rmarkdown.qmd
           - 15-github-basics.qmd
           - 16-collaborative-workflows.qmd
+  page-footer: 
+    left: ""
+    right: ""
 
 format:
   html:
