--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,8 +47,8 @@ website:
           - 15-github-basics.qmd
           - 16-collaborative-workflows.qmd
   page-footer: 
-    left: ""
-    right: ""
+    center: 
+      - text: "{{< include _includes/footer.html >}}"
 
 format:
   html:
