--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,8 +47,7 @@ website:
           - 15-github-basics.qmd
           - 16-collaborative-workflows.qmd
   page-footer: 
-    center: 
-      - text: "{{< include _includes/footer.html >}}"
+    center: "© 2025 R Stats Bootcamp :: 📫 [Contact](mailto:contact@rstatsbootcamp.edu) :: 🦑 [GitHub](https://github.com/your-repo/RStatsBootcamp-2025)"
 
 format:
   html:
