--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,7 +47,7 @@ website:
           - 15-github-basics.qmd
           - 16-collaborative-workflows.qmd
   page-footer: 
-    center: "© 2025 R Stats Bootcamp :: 🦑 [GitHub](https://github.com/your-repo/RStatsBootcamp-2025) :: ![](https://img.shields.io/badge/license-MIT-green) "
+    center: "© 2025 R Stats Bootcamp :: 🦑 [GitHub](https://github.com/your-repo/RStatsBootcamp-2025) :: [![](https://img.shields.io/badge/license-MIT-green)](https://github.com/rstats-bootcamp/RStatsBootcamp-2025/blob/main/LICENSE.md) "
 
 format:
   html:
