--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
   publish = "_site"
-  command = """
-    curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.7.30/quarto-1.7.30-linux-amd64.tar.gz | tar -xz
-    ./quarto-1.7.30/bin/quarto render
-  """
+  command = "curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.7.30/quarto-1.7.30-linux-amd64.tar.gz | tar -xz && ./quarto-1.7.30/bin/quarto render"
 
 [build.environment]
   PATH = "./quarto-1.7.30/bin:$PATH"
