Update `netlify.toml` to simplify the build command for Quarto and introduce the `@netlify/plugin-quarto` plugin for improved deployment management. This change enhances the build process by specifying the Quarto version and streamlining the environment configuration.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
   publish = "_site"
-  command = "curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.7.30/quarto-1.7.30-linux-amd64.tar.gz | tar -xz && ./quarto-1.7.30/bin/quarto render"
+  command = "quarto render"
 
 [build.environment]
-  PATH = "./quarto-1.7.30/bin:$PATH"
-  NETLIFY_BUILD_IMAGE = "jammy"
+  QUARTO_VERSION = "1.7.30"
+
+[[plugins]]
+  package = "@netlify/plugin-quarto"
 
 [[redirects]]
   from = "/*"
