Update `netlify.toml` to change the build command to execute a shell script for Quarto installation and rendering. This modification simplifies the build process by removing the explicit Quarto version setting and streamlining the deployment configuration.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
   publish = "_site"
-  command = "quarto render"
-
-[build.environment]
-  QUARTO_VERSION = "1.7.30"
+  command = "bash install_quarto_and_render.sh"
 
 [[redirects]]
   from = "/*"
