--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -21,10 +21,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
 
-      - name: Install R packages
-        run: |
-          Rscript -e 'install.packages(c("quarto", "rmarkdown", "tidyverse"))'
-
+          - name: Install R packages
+          run: |
+            Rscript -e 'install.packages(c("quarto", "rmarkdown", "tidyverse", "reshape2", "xml2", "downlit"))'
+        
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
