Enhance GitHub Actions workflow by updating the R package installation step to check for already installed packages before installation. This change optimizes the setup process for Quarto projects by preventing redundant installations.

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up R
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install R packages
         run: |
-          Rscript -e 'install.packages(c("quarto", "rmarkdown", "tidyverse", "reshape2", "xml2", "downlit"))'
+          Rscript -e 'pkgs <- c("quarto", "rmarkdown", "tidyverse", "reshape2", "xml2", "downlit", "car", "MASS", "readxl", "openxlsx", "knitr", "datasets", "faux", "dplyr", "ggplot2", "readr", "tidyr"); new <- pkgs[!pkgs %in% rownames(installed.packages())]; if (length(new)) install.packages(new)'
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
